@@ -2,6 +2,7 @@ package com.kodlamaio.inventoryService.business.concretes;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -29,8 +30,9 @@ public class BrandManager implements BrandService {
 	@Override
 	public List<GetAllBrandsResponse> getAll() {
 		List<Brand> brands = brandRepository.findAll();
-		List<GetAllBrandsResponse> responses = brands.stream().map(brand -> modelMapperService.forResponse().map(brand, GetAllBrandsResponse.class))
-				.toList();
+		List<GetAllBrandsResponse> responses = brands.stream()
+				.map(brand -> modelMapperService.forResponse().map(brand, GetAllBrandsResponse.class))
+				.collect(Collectors.toList());
 		return responses;
 	}
 
@@ -46,26 +48,20 @@ public class BrandManager implements BrandService {
 
 	@Override
 	public GetBrandResponse getBrandByName(String name) {
-		checkIfBrandExistsByName(name);
+		checkIfBrandNotExistsByName(name);
 		
 		Brand brand = brandRepository.findByName(name);
 		
 		GetBrandResponse response = modelMapperService.forResponse().map(brand, GetBrandResponse.class);
 		return response;
 	}
-	
-	public Brand getBrandNameByBrandId(String id) {
-		checkIfBrandExistsById(id);
-		
-		Brand brand = brandRepository.findById(id).orElse(null);
-		
-		return brand;
-	}
 
 	@Override
 	public CreateBrandResponse add(CreateBrandRequest createRequest) {
+		checkIfBrandExistsByName(createRequest.getName());
 		Brand brand = modelMapperService.forRequest().map(createRequest, Brand.class);
 		brand.setId(UUID.randomUUID().toString());
+		
 		brandRepository.save(brand);
 		
 		CreateBrandResponse response = modelMapperService.forResponse().map(brand, CreateBrandResponse.class);
@@ -75,8 +71,10 @@ public class BrandManager implements BrandService {
 	@Override
 	public UpdateBrandResponse update(UpdateBrandRequest updateRequest) {
 		checkIfBrandExistsById(updateRequest.getId());
+		checkIfBrandExistsByName(updateRequest.getName());
 		
 		Brand brand = modelMapperService.forRequest().map(updateRequest, Brand.class);
+		
 		brandRepository.save(brand);
 		
 		UpdateBrandResponse response = modelMapperService.forResponse().map(brand, UpdateBrandResponse.class);
@@ -88,21 +86,35 @@ public class BrandManager implements BrandService {
 		checkIfBrandExistsById(id);
 		brandRepository.deleteById(id);
 	}
-
-	/// Public Rules \\\
+	
+	@Override
+	public Brand getBrandNameByBrandId(String id) {
+		checkIfBrandExistsById(id);
+		
+		Brand brand = brandRepository.findById(id).orElse(null);
+		
+		return brand;
+	}
 
 	/// Private Rules \\\
 
 	private void checkIfBrandExistsById(String id) {
 		if (brandRepository.findById(id) == null) {
-			throw new BusinessException(MessagesForBrand.BrandNotExist);
+			throw new BusinessException(MessagesForBrand.BrandNotExistById);
 		}
 	}
 
 	private void checkIfBrandExistsByName(String name) {
-		if (brandRepository.findByName(name) == null) {
-			throw new BusinessException(MessagesForBrand.BrandNotExist);
+		if (brandRepository.findByName(name) != null) {
+			throw new BusinessException(MessagesForBrand.BrandExistsByName);
 		}
 	}
+	
+	private void checkIfBrandNotExistsByName(String name) {
+		if (brandRepository.findByName(name) == null) {
+			throw new BusinessException(MessagesForBrand.BrandNotExistByName);
+		}
+	}
+	
 
 }
