@@ -2,6 +2,7 @@ package com.kodlamaio.inventoryService.business.concretes;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -32,9 +33,9 @@ public class ModelManager implements ModelService{
 	@Override
 	public List<GetAllModelsResponse> getAll() {
 		List<Model> models = modelRepository.findAll();
-		List<GetAllModelsResponse> responses = models.stream().map(model -> modelMapperService.forResponse()
-				.map(model, GetAllModelsResponse.class))
-				.toList();
+		List<GetAllModelsResponse> responses = models.stream()
+				.map(model -> this.modelMapperService.forResponse().map(model, GetAllModelsResponse.class))
+				.collect(Collectors.toList());
 		return responses;
 	}
 	
@@ -47,6 +48,7 @@ public class ModelManager implements ModelService{
 		return response;
 	}
 	
+	@Override
 	public Model getModelNameByModelId(String id) {
 		checkIfModelExistsById(id);
 		
@@ -58,7 +60,7 @@ public class ModelManager implements ModelService{
 	@Override
 	public CreateModelResponse add(CreateModelRequest createRequest) {
 		checkIfBrandExistById(createRequest.getBrandId());
-		
+		checkIfModelExistsByName(createRequest.getName());
 		Model model = modelMapperService.forRequest().map(createRequest, Model.class);
 		model.setId(UUID.randomUUID().toString());
 		modelRepository.save(model);
@@ -72,6 +74,8 @@ public class ModelManager implements ModelService{
 	@Override
 	public UpdateModelResponse update(UpdateModelRequest updateRequest) {
 		checkIfModelExistsById(updateRequest.getId());
+		checkIfBrandExistById(updateRequest.getBrandId());
+		checkIfModelExistsByName(updateRequest.getName());
 		
 		Model model = modelMapperService.forRequest().map(updateRequest, Model.class);
 		modelRepository.save(model);
@@ -88,10 +92,6 @@ public class ModelManager implements ModelService{
 		modelRepository.deleteById(id);
 	}
 	
-	/// Public Rules \\\
-	
-	
-	
 	/// Private Rules \\\
 	
 	private void checkIfBrandExistById(String id) {
@@ -102,6 +102,10 @@ public class ModelManager implements ModelService{
 		if(modelRepository.findById(id) == null) {
 			throw new BusinessException(MessagesForModel.ModelNotExist);
 		}
+	}
+	
+	private void checkIfModelExistsByName(String name) {
+		brandService.getBrandByName(name);
 	}
 	
 }
